--- a/InfinityWeather/Info.plist
+++ b/InfinityWeather/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>BASE_URL</key>
+	<string>$(BASE_URL)</string>
+	<key>OPEN_WEATHER_API_KEY</key>
+	<string>$(OPEN_WEATHER_API_KEY)</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Eczar-Bold.ttf</string>
