--- a/InfinityWeather/Dev.xcconfig
+++ b/InfinityWeather/Dev.xcconfig
@@ -9,4 +9,4 @@
 // https://help.apple.com/xcode/#/dev745c5c974
 
 OPEN_WEATHER_API_KEY=15e0c36e638616deac74caf6d54e703e
-BASE_URL=https://api.openweathermap.org
+BASE_URL="https://api.openweathermap.org"
